--- a/assets/css/sass/components/header.scss
+++ b/assets/css/sass/components/header.scss
@@ -4,9 +4,10 @@
 
 .header {
 	margin-bottom: 10px;
+	position: relative;
 	
     .logo {
-        width: 200px;
+        width: 180px;
         left: 4px;
         position: relative;
     }
