--- a/assets/css/sass/components/icon.scss
+++ b/assets/css/sass/components/icon.scss
@@ -1,5 +1,11 @@
+/*
+** Icon 
+*/
+
+
 .icon {
 	font-size: 28px;
+	vertical-align: middle;
 
 	&.large {
 		font-size: 40px;
@@ -7,22 +13,12 @@
 
 	&.ion-ios-arrow-down {
 		opacity: 0.7;
-		position :relative;
-		-webkit-animation: mymove 1.3s infinite ease-out; /* Safari 4.0 - 8.0 */
-		animation: mymove 1.3s infinite ease-out;
 		position: relative;
+		@include animation(mymove 1.3s infinite ease-out);
 		top: -10px;
 	}
 
-	/* Safari 4.0 - 8.0 */
-	@-webkit-keyframes mymove {
-		0%   {top: -10px;}
-		25%  {top: 10px;}
-		100% {top: -10px;}
-	}
-
-	/* Standard syntax */
-	@keyframes mymove {
+	@include keyframes(mymove) {
 		0%   {top: -10px;}
 		25%  {top: 10px;}
 		100% {top: -10px;}
