--- a/assets/css/css/main/main.css
+++ b/assets/css/css/main/main.css
@@ -1,16 +1,61 @@
+@charset "UTF-8";
 /*
 ** Main - Imports
 */
 /** Components  **/
+/*
+** Mixins
+*/
+/**----------------------------
+** OVERVIEW
+*------------------------------
+* 1. Animations and keyframes
+* 2. Box-shadow
+* 3. Transition
+* 4. Transform
+*
+*/
+/*
+** 1. Animations and keyframes 
+*/
+/*
+** 2. Box-shadow
+*/
+/*
+** 3. Transition
+*/
+/*
+** 4. Transform
+*/
+/* generic transform */
+/* rotate */
+/* scale */
+/* translate */
+/* skew */
+/* transform origin */
+/*
+** General 
+*/
 body {
   margin: 0;
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   background: #ca5e61; }
 
 p {
   line-height: 1.6em;
-  margin: 0; }
+  margin: 0;
+  margin-bottom: 10px; }
+
+a {
+  font-size: 18px; }
+
+h1 {
+  font-size: 40px;
+  margin-bottom: 40px; }
+
+h2 {
+  font-size: 32px; }
 
 strong {
   font-weight: 600; }
@@ -26,7 +71,7 @@ strong {
   height: 32px; }
 
 span {
-  font-size: 17px;
+  font-size: 18px;
   font-weight: 500; }
 
 .day {
@@ -39,11 +84,27 @@ span {
 .off {
   pointer-events: none; }
 
+.center, .align-center {
+  text-align: center; }
+
 .align-right {
   text-align: right; }
 
+.align-left {
+  text-align: left; }
+
 .hidden {
   opacity: 0 !important; }
+
+.link:hover {
+  border-bottom: 1px solid #fff; }
+
+/* Margin justify */
+.mt-1 {
+  margin-top: 10px; }
+
+.mb-1 {
+  margin-bottom: 10px; }
 
 /*
 ** Container 
@@ -53,69 +114,155 @@ span {
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  padding: 0 10px; }
+  padding: 0 20px; }
 
 /*
 ** Header 
 */
 .header {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  position: relative; }
   .header .logo {
-    width: 200px;
+    width: 180px;
     left: 4px;
     position: relative; }
 
+/*
+** Content 
+*/
+/* Top content */
 .top-content {
   background: #e7e7e7;
   color: #777;
   padding-top: 20px;
   padding-bottom: 20px; }
-  .top-content p {
-    margin-bottom: 0; }
 
+/* Bottom content */
 .bottom-content {
   color: #fff;
   padding-top: 20px;
   padding-bottom: 20px; }
   .bottom-content .pointer {
     opacity: 1;
+    -moz-transition: 0.2s;
+    -o-transition: 0.2s;
     -webkit-transition: 0.2s;
-    /* Safari */
     transition: 0.2s; }
     .bottom-content .pointer:before {
+      -moz-transition: 0.2s;
+      -o-transition: 0.2s;
       -webkit-transition: 0.2s;
-      /* Safari */
       transition: 0.2s;
+      -moz-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
       -ms-transform: rotate(0deg);
-      /* IE 9 */
       -webkit-transform: rotate(0deg);
-      /* Chrome, Safari, Opera */
       transform: rotate(0deg); }
     .bottom-content .pointer.active:before {
+      -moz-transition: 0.2s;
+      -o-transition: 0.2s;
       -webkit-transition: 0.2s;
-      /* Safari */
       transition: 0.2s;
-      -ms-transform: rotate(180deg);
-      /* IE 9 */
-      -webkit-transform: rotate(180deg);
-      /* Chrome, Safari, Opera */
-      transform: rotate(180deg); }
+      -moz-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg); }
 
+.menu-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent; }
+  .menu-btn i {
+    font-size: 35px; }
+
+.menu {
+  background: #e7e7e7;
+  width: 100%;
+  position: fixed;
+  z-index: 9;
+  left: 0;
+  height: 100%;
+  top: 0;
+  padding: 20px 0;
+  opacity: 0;
+  pointer-events: none; }
+  .menu.active {
+    opacity: 1;
+    pointer-events: auto; }
+  .menu .icon {
+    vertical-align: bottom; }
+  .menu #email {
+    font-weight: bold; }
+  .menu ul {
+    padding: 0;
+    margin: 0;
+    display: table;
+    width: 100%; }
+    .menu ul li a {
+      padding: 15px;
+      border-bottom: 1px solid #ca5e61;
+      color: #ca5e61;
+      float: left;
+      width: 100%; }
+    .menu ul li:last-child a {
+      border-bottom: 0; }
+
+/*
+** Alert 
+*/
+.alert {
+  color: #fff;
+  box-sizing: border-box;
+  background: #aa4f51;
+  font-weight: 600;
+  padding: 15px; }
+  .alert i {
+    vertical-align: middle; }
+
+/*
+** Icon 
+*/
 .icon {
   font-size: 28px;
-  /* Safari 4.0 - 8.0 */
-  /* Standard syntax */ }
+  vertical-align: middle; }
   .icon.large {
     font-size: 40px; }
   .icon.ion-ios-arrow-down {
     opacity: 0.7;
     position: relative;
     -webkit-animation: mymove 1.3s infinite ease-out;
-    /* Safari 4.0 - 8.0 */
+    -moz-animation: mymove 1.3s infinite ease-out;
+    -ms-animation: mymove 1.3s infinite ease-out;
+    -o-animation: mymove 1.3s infinite ease-out;
     animation: mymove 1.3s infinite ease-out;
-    position: relative;
     top: -10px; }
 @-webkit-keyframes mymove {
+  0% {
+    top: -10px; }
+  25% {
+    top: 10px; }
+  100% {
+    top: -10px; } }
+@-moz-keyframes mymove {
+  0% {
+    top: -10px; }
+  25% {
+    top: 10px; }
+  100% {
+    top: -10px; } }
+@-ms-keyframes mymove {
+  0% {
+    top: -10px; }
+  25% {
+    top: 10px; }
+  100% {
+    top: -10px; } }
+@-o-keyframes mymove {
   0% {
     top: -10px; }
   25% {
@@ -129,14 +276,41 @@ span {
     top: 10px; }
   100% {
     top: -10px; } }
-.select-form .caret {
-  color: #fff !important; }
+/*
+** Form 
+*/
+/*
+** Buttons 
+*/
+.btn {
+  margin: 0;
+  font-size: 18px;
+  height: 42px;
+  line-height: 42px;
+  -moz-transform: scale(1);
+  -o-transform: scale(1);
+  -ms-transform: scale(1);
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -moz-transition: 0.2s;
+  -o-transition: 0.2s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s; }
 
-.select-wrapper input.select-dropdown {
-  border-color: #fff; }
-
-.dropdown-content li > a, .dropdown-content li > span {
-  color: #ca5e61; }
+.btn-large {
+  margin: 0;
+  font-size: 18px;
+  height: 64px;
+  line-height: 64px;
+  -moz-transform: scale(1);
+  -o-transform: scale(1);
+  -ms-transform: scale(1);
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -moz-transition: 0.2s;
+  -o-transition: 0.2s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s; }
 
 .btn-order {
   position: relative;
@@ -150,47 +324,38 @@ span {
     left: 0;
     right: 0;
     font-size: 60px;
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
     -ms-transform: scale(0);
-    /* IE 9 */
     -webkit-transform: scale(0);
-    /* Safari */
     transform: scale(0);
+    -moz-transition: 0.2s;
+    -o-transition: 0.2s;
     -webkit-transition: 0.2s;
-    /* Safari */
     transition: 0.2s;
     -webkit-transition-delay: 0.1s;
     /* Safari */
     transition-delay: 0.1s;
     line-height: 0; }
-  .btn-order .btn {
-    margin: 0;
-    font-size: 18px;
-    height: 64px;
-    line-height: 64px;
-    -webkit-transition: 0.2s;
-    /* Safari */
-    transition: 0.2s;
-    -ms-transform: scale(1);
-    /* IE 9 */
-    -webkit-transform: scale(1);
-    /* Safari */
-    transform: scale(1); }
   .btn-order.checked {
     pointer-events: none; }
     .btn-order.checked .btn {
       opacity: 0;
+      -moz-transform: scale(0.5);
+      -o-transform: scale(0.5);
       -ms-transform: scale(0.5);
-      /* IE 9 */
       -webkit-transform: scale(0.5);
-      /* Safari */
       transform: scale(0.5); }
     .btn-order.checked .icon {
+      -moz-transform: scale(1);
+      -o-transform: scale(1);
       -ms-transform: scale(1);
-      /* IE 9 */
       -webkit-transform: scale(1);
-      /* Safari */
       transform: scale(1); }
 
+/*
+** Footer 
+*/
 .footer {
   margin-top: 20px; }
   @media (max-width: 1023px) {
@@ -217,6 +382,9 @@ span {
     display: block;
     font-weight: 500; }
 
+/*
+** Table 
+*/
 table td, table th {
   padding: 10px; }
 table tr:nth-child(odd) td {
@@ -252,12 +420,54 @@ table .icon {
     position: relative; }
     table .icon.asc.desc:after {
       content: "\f271";
+      -moz-transform: rotate(90deg);
+      -o-transform: rotate(90deg);
       -ms-transform: rotate(90deg);
-      /* IE 9 */
       -webkit-transform: rotate(90deg);
-      /* Chrome, Safari, Opera */
       transform: rotate(90deg);
       font-size: 18px;
       font-weight: 400;
       margin-left: 7px;
       top: 0px; }
+
+/*
+** Materializecss Customize
+*/
+.select-form .caret {
+  color: #fff !important; }
+
+.select-wrapper input.select-dropdown {
+  border-color: #fff; }
+
+.dropdown-content li > a, .dropdown-content li > span {
+  color: #ca5e61; }
+
+.bottom-content form input, .bottom-content form label {
+  color: #fff; }
+
+/* Change the white to any color ;) */
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px white inset; }
+
+/* MaterializeCss ändringar */
+input:not([type]).validate + label, input[type=text]:not(.browser-default).validate + label, input[type=password]:not(.browser-default).validate + label, input[type=email]:not(.browser-default).validate + label, input[type=url]:not(.browser-default).validate + label, input[type=time]:not(.browser-default).validate + label, input[type=date]:not(.browser-default).validate + label, input[type=datetime]:not(.browser-default).validate + label, input[type=datetime-local]:not(.browser-default).validate + label, input[type=tel]:not(.browser-default).validate + label, input[type=number]:not(.browser-default).validate + label, input[type=search]:not(.browser-default).validate + label, textarea.materialize-textarea.validate + label {
+  width: 80%; }
+
+input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
+  border-bottom: 1px solid #fff; }
+
+/* label underline focus color */
+ut:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]), input[type=time]:not(.browser-default):focus:not([readonly]), input[type=date]:not(.browser-default):focus:not([readonly]), input[type=datetime]:not(.browser-default):focus:not([readonly]), input[type=datetime-local]:not(.browser-default):focus:not([readonly]), input[type=tel]:not(.browser-default):focus:not([readonly]), input[type=number]:not(.browser-default):focus:not([readonly]), input[type=search]:not(.browser-default):focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #fff;
+  -webkit-box-shadow: 0 1px 0 0 #fff;
+  box-shadow: 0 1px 0 0 #fff; }
+
+/* label focus color */
+input:not([type]):focus:not([readonly]) + label, input[type=text]:not(.browser-default):focus:not([readonly]) + label, input[type=password]:not(.browser-default):focus:not([readonly]) + label, input[type=email]:not(.browser-default):focus:not([readonly]) + label, input[type=url]:not(.browser-default):focus:not([readonly]) + label, input[type=time]:not(.browser-default):focus:not([readonly]) + label, input[type=date]:not(.browser-default):focus:not([readonly]) + label, input[type=datetime]:not(.browser-default):focus:not([readonly]) + label, input[type=datetime-local]:not(.browser-default):focus:not([readonly]) + label, input[type=tel]:not(.browser-default):focus:not([readonly]) + label, input[type=number]:not(.browser-default):focus:not([readonly]) + label, input[type=search]:not(.browser-default):focus:not([readonly]) + label, textarea.materialize-textarea:focus:not([readonly]) + label {
+  color: #fff; }
+
+/* text input Correct */
+input.valid:not([type]), input.valid:not([type]):focus, input[type=text].valid:not(.browser-default), input[type=text].valid:not(.browser-default):focus, input[type=password].valid:not(.browser-default), input[type=password].valid:not(.browser-default):focus, input[type=email].valid:not(.browser-default), input[type=email].valid:not(.browser-default):focus, input[type=url].valid:not(.browser-default), input[type=url].valid:not(.browser-default):focus, input[type=time].valid:not(.browser-default), input[type=time].valid:not(.browser-default):focus, input[type=date].valid:not(.browser-default), input[type=date].valid:not(.browser-default):focus, input[type=datetime].valid:not(.browser-default), input[type=datetime].valid:not(.browser-default):focus, input[type=datetime-local].valid:not(.browser-default), input[type=datetime-local].valid:not(.browser-default):focus, input[type=tel].valid:not(.browser-default), input[type=tel].valid:not(.browser-default):focus, input[type=number].valid:not(.browser-default), input[type=number].valid:not(.browser-default):focus, input[type=search].valid:not(.browser-default), input[type=search].valid:not(.browser-default):focus, textarea.materialize-textarea.valid, textarea.materialize-textarea.valid:focus, .select-wrapper.valid > input.select-dropdown {
+  border-bottom: 1px solid #fff;
+  -webkit-box-shadow: 0 1px 0 0 #fff;
+  box-shadow: 0 1px 0 0 #fff; }
