--- a/assets/css/sass/components/buttons.scss
+++ b/assets/css/sass/components/buttons.scss
@@ -1,3 +1,24 @@
+/*
+** Buttons 
+*/
+
+.btn {
+	margin: 0;
+	font-size: 18px;
+	height: 42px;
+    line-height: 42px;
+    @include scale(1);
+	@include transition(0.2s);
+}
+.btn-large {
+	margin: 0;
+	font-size: 18px;
+	height: 64px;
+    line-height: 64px;
+    @include scale(1);
+	@include transition(0.2s);
+}
+
 .btn-order {
 	position: relative;
 	margin: 15px 0;
@@ -11,26 +32,11 @@
 		left: 0;
 		right: 0;
 		font-size: 60px;
-		-ms-transform: scale(0); /* IE 9 */
-		-webkit-transform: scale(0); /* Safari */
-		transform: scale(0);
-		-webkit-transition: 0.2s; /* Safari */
-	    transition: 0.2s;
+		@include scale(0);
+		@include transition(0.2s);
 	    -webkit-transition-delay: 0.1s; /* Safari */
     	transition-delay: 0.1s;
 	    line-height: 0;
-	}
-
-	.btn {
-		margin: 0;
-		font-size: 18px;
-		height: 64px;
-	    line-height: 64px;
-	    -webkit-transition: 0.2s; /* Safari */
-	    transition: 0.2s;
-	    -ms-transform: scale(1); /* IE 9 */
-	    -webkit-transform: scale(1); /* Safari */
-	    transform: scale(1);
 	}
 
 	&.checked {
@@ -38,15 +44,11 @@
 
 		.btn {
 			opacity: 0;
-			-ms-transform: scale(0.5); /* IE 9 */
-			-webkit-transform: scale(0.5); /* Safari */
-			transform: scale(0.5);
+			@include scale(0.5);
 		}
 
 		.icon {
-			-ms-transform: scale(1); /* IE 9 */
-		    -webkit-transform: scale(1); /* Safari */
-		    transform: scale(1); 
+			@include scale(1);
 		}
 	}
 }
