--- a/assets/css/sass/components/content.scss
+++ b/assets/css/sass/components/content.scss
@@ -1,13 +1,18 @@
+/*
+** Content 
+*/
+
+
+/* Top content */
 .top-content {
 	background: #e7e7e7;
 	color: #777;
 	padding-top: 20px;
 	padding-bottom: 20px;
-
-	p {
-		margin-bottom: 0;
-	}
 }
+
+
+/* Bottom content */
 .bottom-content {
 	color: #fff;
 	padding-top: 20px;
@@ -15,25 +20,18 @@
 
 	.pointer {
 		opacity: 1;
-		-webkit-transition: 0.2s; /* Safari */
-	    transition: 0.2s;
+		@include transition(0.2s);
 
 	    &:before {
-			-webkit-transition: 0.2s; /* Safari */
-    		transition: 0.2s;
-			-ms-transform: rotate(0deg); /* IE 9 */
-			-webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
-			transform: rotate(0deg);
+	    	@include transition(0.2s);
+			@include rotate(0);
 		}
 
 		&.active {
 
 			&:before {
-				-webkit-transition: 0.2s; /* Safari */
-	    		transition: 0.2s;
-				-ms-transform: rotate(180deg); /* IE 9 */
-				-webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
-				transform: rotate(180deg);
+				@include transition(0.2s);
+				@include rotate(0);
 			}
 		}
 	}
