--- a/assets/css/sass/components/general.scss
+++ b/assets/css/sass/components/general.scss
@@ -1,13 +1,30 @@
+/*
+** General 
+*/
+
+
 body {
 	margin: 0;
 	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 20px;
+	font-size: 18px;
 	background: #ca5e61;
 }
 
 p {
 	line-height: 1.6em;
 	margin: 0;
+	margin-bottom: 10px;
+}
+a {
+	font-size: 18px;
+}
+
+h1 {
+	font-size: 40px;
+	margin-bottom: 40px;
+}
+h2 {
+	font-size: 32px;
 }
 strong {
 	font-weight: 600;
@@ -24,7 +41,7 @@ strong {
 }
 
 span {
-	font-size: 17px;
+	font-size: 18px;
 	font-weight: 500;
 }
 
@@ -40,9 +57,28 @@ span {
 .off {
 	pointer-events: none;
 }
+.center, .align-center {
+	text-align: center;
+}
 .align-right {
 	text-align: right;
 }
+.align-left {
+	text-align: left;
+}
 .hidden {
 	opacity: 0!important;
+}
+.link {
+	&:hover {
+		border-bottom: 1px solid #fff;
+	}
+}
+
+/* Margin justify */
+.mt-1 {
+	margin-top: 10px;
+}
+.mb-1 {
+	margin-bottom: 10px;
 }
