--- a/assets/css/sass/main/main.scss
+++ b/assets/css/sass/main/main.scss
@@ -3,12 +3,16 @@
 */
 
 /** Components  **/
+@import '../components/mixins';
 @import '../components/general';
 @import '../components/container';
 @import '../components/header';
 @import '../components/content';
+@import '../components/menu';
+@import '../components/alert';
 @import '../components/icon';
-@import '../components/forms';
+@import '../components/form';
 @import '../components/buttons';
 @import '../components/footer';
 @import '../components/table';
+@import '../components/materializecss';
