--- a/assets/css/css/main/main.css
+++ b/assets/css/css/main/main.css
@@ -163,11 +163,11 @@ span {
       -o-transition: 0.2s;
       -webkit-transition: 0.2s;
       transition: 0.2s;
-      -moz-transform: rotate(0deg);
-      -o-transform: rotate(0deg);
-      -ms-transform: rotate(0deg);
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg); }
+      -moz-transform: rotate(180deg);
+      -o-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+      -webkit-transform: rotate(180deg);
+      transform: rotate(180deg); }
 
 .menu-btn {
   position: absolute;
@@ -366,17 +366,18 @@ span {
       right: 0;
       margin: 0; } }
   .footer #quantity {
-    width: 40px;
-    height: 40px;
+    height: 47px;
     background: #ffffff;
-    line-height: 40px;
-    border-radius: 100%;
+    border-radius: 50px;
     display: inline-block;
     margin-top: 20px;
     margin-bottom: 10px;
     font-size: 26px;
     color: #ca5e61;
-    font-weight: 700; }
+    font-weight: 700;
+    padding: 0 10px;
+    line-height: 46px;
+    min-width: 48px; }
   .footer span {
     font-size: 17px;
     display: block;
