--- a/assets/css/sass/components/footer.scss
+++ b/assets/css/sass/components/footer.scss
@@ -14,17 +14,18 @@
 	}
 
 	#quantity {
-		width: 40px;
-		height: 40px;
+		height: 47px;
 		background: #ffffff;
-		line-height: 40px;
-		border-radius: 100%;
+		border-radius: 50px;
 		display: inline-block;
 		margin-top: 20px;
 		margin-bottom: 10px;
 		font-size: 26px;
 		color: #ca5e61;
 		font-weight: 700;
+		padding: 0 10px;
+		line-height: 46px;
+		min-width: 48px;
 	}
 	span {
 		font-size: 17px;
